[workspace]
# Standalone crate: opt out of the parent workspace so the wasm-only build doesn't try
# to use shared dependency settings.

[package]
name = "audit-redact-secrets"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sample linpodx audit_filter plugin: redact secret-looking values from audit payloads before they hit the hash chain"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
