[workspace]
# Standalone crate: opt out of the parent workspace so the wasm-only build doesn't try
# to use shared dependency settings.

[package]
name = "inject-tracing-env"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sample linpodx runtime_injector plugin: appends OTEL_* env vars to every container the daemon creates"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
