[workspace]
# Standalone crate: opt out of the parent workspace so the wasm-only build doesn't try
# to use shared dependency settings.

[package]
name = "require-readonly-rootfs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sample linpodx profile_validator plugin: reject sandbox profiles that don't set read_only_rootfs: true"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
